crates/data_flow/re_mcap/src/decoders/snapshots/re_mcap__decoders__protobuf__integration_tests__oneof_nested.snap
---
source: crates/data_flow/re_mcap/src/decoders/protobuf.rs
expression: "format_chunk(&chunks[0])"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                       │
│ * entity_path: /scene_topic                                                                                                                                                     │
│ * id: [**REDACTED**]                                                                                                                                                            │
│ * version: [**REDACTED**]                                                                                                                                                       │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌───────────────────────────────────────────────┬───────────────────────────────┬──────────────────────────────────┬──────────────────────────────────────────────────────────┐ │
│ │ RowId                                         ┆ message_log_time              ┆ message_publish_time             ┆ com.example.Scene:message                                │ │
│ │ ---                                           ┆ ---                           ┆ ---                              ┆ ---                                                      │ │
│ │ type: non-null FixedSizeBinary(16)            ┆ type: Timestamp(ns)           ┆ type: Timestamp(ns)              ┆ type: List(Struct("object": Struct("object": non-null    │ │
│ │ ARROW:extension:metadata: {"namespace":"row"} ┆ index_name: message_log_time  ┆ index_name: message_publish_time ┆ Utf8, "color": Struct("rgb": Utf8, "hsv": Utf8, "bgr":   │ │
│ │ ARROW:extension:name: TUID                    ┆ is_sorted: true               ┆ is_sorted: true                  ┆ Utf8), metadata: {"ARROW:extension:name":                │ │
│ │ is_sorted: true                               ┆ kind: index                   ┆ kind: index                      ┆ "rerun.datatypes.ProtobufOneOf"}, "gamma": Float32)))    │ │
│ │ kind: control                                 ┆                               ┆                                  ┆ archetype: com.example.Scene                             │ │
│ │                                               ┆                               ┆                                  ┆ component: com.example.Scene:message                     │ │
│ │                                               ┆                               ┆                                  ┆ kind: data                                               │ │
│ ╞═══════════════════════════════════════════════╪═══════════════════════════════╪══════════════════════════════════╪══════════════════════════════════════════════════════════╡ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000001 ┆ 1970-01-01T00:00:00.000000001    ┆ [{object: {object: cube, color: {rgb: 128,64,32, hsv:    │ │
│ │                                               ┆                               ┆                                  ┆ null, bgr: null}, gamma: null}}]                         │ │
│ ├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤ │
│ │ row_[**REDACTED**]                            ┆ 1970-01-01T00:00:00.000000002 ┆ 1970-01-01T00:00:00.000000002    ┆ [{object: {object: pyramid, color: {rgb: null, hsv:      │ │
│ │                                               ┆                               ┆                                  ┆ null, bgr: 0,255,0}, gamma: null}}]                      │ │
│ └───────────────────────────────────────────────┴───────────────────────────────┴──────────────────────────────────┴──────────────────────────────────────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
